--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ django-mptt = "^0.11.0"
 [tool.poetry.dev-dependencies]
 pep8 = "^1.7.1"
 flake8 = "^3.8.3"
+autopep8 = "^1.5.3"
 
 [build-system]
 requires = ["poetry>=0.12"]
